@@ -1,33 +1,58 @@
 package ru.yandex.practicum.filmorate.service;
 
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
 import ru.yandex.practicum.filmorate.exception.NotFoundException;
 import ru.yandex.practicum.filmorate.model.Film;
+import ru.yandex.practicum.filmorate.model.Genre;
 import ru.yandex.practicum.filmorate.storage.FilmStorage;
 import ru.yandex.practicum.filmorate.storage.UserStorage;
+import ru.yandex.practicum.filmorate.storage.db.FilmDbStorage;
+import ru.yandex.practicum.filmorate.storage.db.GenreDbStorage;
+import ru.yandex.practicum.filmorate.storage.db.MpaRatingDbStorage;
 
 import java.util.Collection;
-import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
 public class FilmService {
     private final FilmStorage filmStorage;
     private final UserStorage userStorage;
+    private final MpaRatingDbStorage mpaStorage;
+    private final GenreDbStorage genreStorage;
 
-    public FilmService(FilmStorage filmStorage, UserStorage userStorage) {
+    public FilmService(@Qualifier("db") FilmStorage filmStorage,
+                       @Qualifier("db") UserStorage userStorage,
+                       MpaRatingDbStorage mpaStorage,
+                       GenreDbStorage genreStorage) {
         this.filmStorage = filmStorage;
         this.userStorage = userStorage;
+        this.mpaStorage = mpaStorage;
+        this.genreStorage = genreStorage;
+    }
+
+    private void validateFilmReferences(Film film) {
+        if (film.getMpa() != null) {
+            mpaStorage.findById(film.getMpa().getId())
+                    .orElseThrow(() -> new NotFoundException("Рейтинг MPA с id=" + film.getMpa().getId() + " не найден"));
+        }
+        if (film.getGenres() != null) {
+            for (Genre genre : film.getGenres()) {
+                genreStorage.findById(genre.getId())
+                        .orElseThrow(() -> new NotFoundException("Жанр с id=" + genre.getId() + " не найден"));
+            }
+        }
     }
 
     public Film add(Film film) {
+        validateFilmReferences(film);
         return filmStorage.add(film);
     }
 
     public Film update(Film film) {
+        validateFilmReferences(film);
         return filmStorage.update(film);
     }
 
@@ -53,10 +78,15 @@ public class FilmService {
     }
 
     public List<Film> getPopular(int count) {
+        if (filmStorage instanceof FilmDbStorage dbStorage) {
+            return dbStorage.getPopular(count);
+        }
         return filmStorage.findAll().stream()
-                .sorted(Comparator.<Film, Integer>comparing(f -> f.getLikes().size(), Comparator.reverseOrder())
-                        .thenComparing(Film::getId))
+                .sorted((a, b) -> {
+                    int cmp = Integer.compare(b.getLikes().size(), a.getLikes().size());
+                    return cmp != 0 ? cmp : Long.compare(a.getId(), b.getId());
+                })
                 .limit(count)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
